tests/baselines/reference/decoratorMetadata-jsdoc.errors.txt
/a.ts(4,9): error TS8020: JSDoc types can only be used inside documentation comments.
/b.ts(4,9): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string | undefined'?
/b.ts(6,9): error TS17019: Adding a postfix '!' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string'?


==== /a.ts (1 errors) ====
    declare var decorator: any;
    class C1 {
        @decorator()
        c?: *;
            ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    }
    
==== /b.ts (2 errors) ====
    declare var decorator: any;
    class C2 {
        @decorator()
        a?: string?;
            ~~~~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string | undefined'?
        @decorator()
        b?: string!;
            ~~~~~~~
!!! error TS17019: Adding a postfix '!' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string'?
    }
    